      (Closes: #762105)
    + [BR] Detects // tricks in privacy breach test.
      (Closes: #786362)
    + [BR] Apply patch from Lisandro Damián Nicanor Pérez Meyer
      for detecting private cmake file.
      (Closes: #785329).
    + [BR] Detect package shipping apt_preferences(5) file.
      (Closes: #786533).
    + [BR] Detect package shipping oui or iab ieee database.
  * checks/manpages.{desc,pm}:
    + [NT] Retire the hyphen-used-as-minus-sign tag as upstream now
      renders both "-" and "\-" as HYPHEN-MINUS.  (Closes: #785353)

  * collection/unpacked:
    + [NT] Apply patch from Tomasz Buchert to extract the full time
      in UTC.

  * commands/reporting-sync-state.pm:
    + [NT] Read mirror files as UTF-8 files to avoid mojibake in
      maintainer names.  Once again, thanks to Andreas Rönnquist
      for the report.

  * data/fields/archive-sections:
    + [NT] Pre-emptively support the "debugsym" section, which is
      expected to be used by debhelper for "ddebs".

  * debian/changelog:
    + [NT] Add missing list of new / removed tags to the
      entry for the previous release.

  * lib/Lintian/Collect/Package.pm:
    + [NT] Create "faux" Lintian::Path entries for missing
      intermediate directories.  This avoids a crash and made
      some checks work correctly even in the absence of such
      immediate directories.  (Closes: LP: #1351380)
  * lib/Lintian/Path.pm:
    + [NT] Apply patch from Tomasz Buchert to add "timestamp"
      method.
    + [NT] Add "faux" method that returns at truth value for
      path entries, which Lintian has created from templates
      to fully connect all path entries in the package.
  * lib/Lintian/Tag/Info.pm:
    + [NT] Expand BTS links using https rather than http.

 -- Niels Thykier <niels@thykier.net>  Thu, 14 May 2015 09:11:05 +0200

lintian (2.5.31) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - bad-intended-distribution
      - dbus-policy-excessively-broad