@@ -1628,3 +1628,11 @@ Info: The package contains a gzip-compressed file that has timestamps.
  .
  Please consider passing the "-n" flag to gzip to avoid this.
 Ref: https://wiki.debian.org/ReproducibleBuilds
+
+Tag: missing-intermediate-directory
+Severity: normal
+Certainty: certain
+Info: The package contains files in the listed directory, but does
+ not contain the actual directory itself.  Some tools do not cope
+ very well with this case. Notably Lintian prior to 2.5.32 would
+ crash on such packages.
